--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                 <div>
                     <div class="flex items-center mb-4">
                         <img src="https://www.vivo.com.br/content/dam/vivo-sites/vivo-com-br/empresas/logo-vivo-empresas.svg" alt="Vivo Empresas" class="h-8">
-                        <span class="ml-2 text-purple-200 font-medium text-sm">JMZ Telecom</span>
+                        <span class="ml-2 text-purple-200 font-small text-sm">JMZ Telecom</span>
                     </div>
                     <p class="text-purple-200 text-sm">Parceira oficial Vivo Empresas com soluções em telecomunicações para empresas de todos os portes.</p>
                 </div>
