--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
                     <div class="flex items-center">
-                        <img src="https://www.vivo.com.br/content/dam/vivo-sites/vivo-com-br/empresas/logo-vivo-empresas.svg" alt="Vivo Empresas" class="h-10">
+                        <img src="https://i.ibb.co/KpkLb9yL/Sem-T-tulo-2.png" alt="Sem-T-tulo-2" style="height: 40px; width: auto; display: block;">
                         <span class="ml-2 text-gray-600 font-medium text-sm">JMZ Telecom</span>
                     </div>
                 </div>
