--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
                     <div class="flex items-center">
-                        <img src="https://i.ibb.co/KpkLb9yL/Sem-T-tulo-2.png" alt="Sem-T-tulo-2" style="height: 48px; width: 28px ; display: block;" class="h10">
+                     <a href="https://ibb.co/bjjvrFS1"><img src="https://i.ibb.co/bjjvrFS1/Sem-T-tulo-2.png" alt="Sem-T-tulo-2" border="0"></a>
                         <span class="ml-2 text-gray-600 font-medium text-sm">JMZ Telecom</span>
                     </div>
                 </div>
