--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
                     <div class="flex items-center">
-                     <a href="https://ibb.co/bjjvrFS1"><img src="https://i.ibb.co/bjjvrFS1/Sem-T-tulo-2.png" alt="Sem-T-tulo-2" border="0"></a>
-                        <span class="ml-2 text-gray-600 font-medium text-sm">JMZ Telecom</span>
+<a href="https://ibb.co/cK3C2ZtZ"><img src="https://i.ibb.co/cK3C2ZtZ/Sem-T-tulo-4.png" alt="Sem-T-tulo-4" border="0"></a>                        <span class="ml-2 text-gray-600 font-medium text-sm">JMZ Telecom</span>
                     </div>
                 </div>
                 
