--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
                     <div class="flex items-center">
-<a href="https://ibb.co/cK3C2ZtZ">
-  <img src="https://i.ibb.co/cK3C2ZtZ/Sem-T-tulo-4.png" alt="Sem-T-tulo-4" border="0" style="height: 100px; width: auto;">
+<a href="https://yuremachar.github.io/Jmztelecom/">
+  <img src="https://i.ibb.co/cK3C2ZtZ/Sem-T-tulo-4.png" alt="Sem-T-tulo-4" border="0" style="height: 110px; width: auto;">
 </a>
                     </div>
                 </div>
